--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+
+body {
+  background-color: #f1f1f1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  height: 170px;
+  width: 480px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  position: absolute;
+  top: 0%;
+  left: 0%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  position: relative;
+  width: 170px;
+}
+
+h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16pt;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: black;
+  cursor: default;
+}
+
+h4 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 8pt;
+  font-weight: 400;
+  cursor: default;
+  color: #636367;
+}
+
+h3 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12pt;
+  font-weight: 200;
+  color: rgb(26, 25, 25);
+  cursor: default;
+}
+
+
+
+#button {
+  padding: 5px 25px;
+  border-radius: 5px; 
+  margin-left: 167px;
+  border: none;
+  background: #239b76; 
+  font-size: 12px;
+  color: #ffffff;
+}
+
+#button:hover {
+  opacity: 55%;
+  color: aquamarine;
 }
