--- a/src/App.css
+++ b/src/App.css
@@ -1,76 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background-color: #f1f1f1;
+    background-color: #fafafa;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #666;
+    justify-content: center;
+    position: relative;
+  }
+
+.container{
+  display: grid;
+  grid-template-columns: 15% 25%;
+  width: 100%;
+  align-items: center;
+  margin: 20px auto;
+  margin-left: 0px;
+  justify-content: center;
+  border: #eee 1px solid;
 }
 
-.container {
-  height: 170px;
-  width: 480px;
-  background-color: #ffffff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-}
-
-ul {
-  list-style: none;
-}
-
-li {
-  display: inline-block;
-}
-
-.image {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-}
-
-img {
-  position: relative;
-  width: 170px;
-}
-
-h1 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16pt;
-  font-weight: 600;
-  text-transform: uppercase;
-  color: black;
-  cursor: default;
-}
-
-h4 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 8pt;
-  font-weight: 400;
-  cursor: default;
-  color: #636367;
-}
-
-h3 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12pt;
-  font-weight: 200;
-  color: rgb(26, 25, 25);
-  cursor: default;
+.playlist-image {
+  margin-left: 20px;
+  width: 150px;
+  height: 150px;
 }
 
 
-
-#button {
+.playlist-action{
   padding: 5px 25px;
   border-radius: 5px; 
-  margin-left: 167px;
   border: none;
   background: #239b76; 
   font-size: 12px;
   color: #ffffff;
 }
 
-#button:hover {
+.playlist-action:hover{
   opacity: 55%;
   color: aquamarine;
 }
